--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "react-portifolio",
+  "name": "react-portifolio0",
+  "homepage": "https://chandrashekar915481.github.io/React-Portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,27 +8,27 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "framer-motion": "^11.11.11",
+    "framer-motion": "^11.1.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.13.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.11.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.8.0",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.4.10"
+    "vite": "^4.0.0"
   }
 }
